--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ flate2 = { version = "1.0.28", features = ["zlib"] }
 tar = "0.4.40"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
 test-case = "3.3.1"
